# OrbbecSDK_v2

./: CMakeLists.txt  End User License Agreement.txt  LICENSE.txt  LiDAR_README.md  README.md
examples/2.device.playback/: CMakeLists.txt  README.md  device_playback.cpp
examples/2.device.record/: CMakeLists.txt  README.md  device_record.cpp
examples/lidar_examples/1.c_lidar_stream/: CMakeLists.txt  README.md  lidar_stream.c
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/frame/: Frame.cpp  Frame.hpp  FrameBufferManager.cpp  FrameBufferManager.hpp  FrameFactory.cpp  FrameMemoryPool.cpp  FrameQueue.hpp  SpscFrameQueue.hpp
src/core/stream/: StreamExtrinsicsManager.cpp  StreamExtrinsicsManager.hpp  StreamIntrinsicsManager.cpp  StreamProfile.cpp  StreamProfile.hpp  StreamProfileFactory.cpp  StreamProfileFactory.hpp
src/device/: CMakeLists.txt  DeviceBase.cpp  DeviceBase.hpp  DevicePids.hpp  IAlgParamManager.hpp  IDepthWorkModeManager.hpp  IDevice.hpp  IDeviceActivityRecorder.hpp  IDeviceClockSynchronizer.hpp  IDeviceComponent.hpp  IDeviceManager.hpp  IDeviceMonitor.hpp  IFrameInterleaveManager.hpp  IFrameTimestamp.hpp  IPresetManager.hpp  IPresetResolutionConfig.hpp  IPresetResolutionConfige.hpp  IProperty.hpp  ISensor.hpp
src/device/astra2/: Astra2AlgParamManager.cpp  Astra2DepthWorkModeManager.cpp  Astra2DepthWorkModeManager.hpp  Astra2Device.cpp  Astra2Device.hpp  Astra2DeviceInfo.cpp  Astra2DeviceInfo.hpp  Astra2PropertyAccessors.cpp  Astra2PropertyAccessors.hpp  Astra2StreamProfileFilter.cpp  CMakeLists.txt
src/device/bootloader/: BootDevice.cpp  BootDevice.hpp  BootDeviceInfo.cpp  BootDeviceInfo.hpp  CMakeLists.txt
src/device/component/: CMakeLists.txt
src/device/context/: CMakeLists.txt  Context.cpp  Context.hpp  DynamicLibraryHelper.hpp  DynamicLibraryManager.cpp  DynamicLibraryManager.hpp
src/device/devicemanager/: CMakeLists.txt  DeviceActivityManager.cpp  DeviceActivityManager.hpp  DeviceEnumInfoBase.hpp  DeviceManager.cpp  DeviceManager.hpp  NetDeviceEnumerator.cpp  NetDeviceEnumerator.hpp  UsbDeviceEnumerator.cpp  UsbDeviceEnumerator.hpp
src/device/femtobolt/: CMakeLists.txt  FemtoBoltDevice.cpp  FemtoBoltDevice.hpp  FemtoBoltDeviceInfo.cpp  FemtoBoltDeviceInfo.hpp  FemtoBoltPresetManager.cpp  FemtoBoltPresetManager.hpp  FemtoBoltPropertyAccessor.cpp  FemtoBoltPropertyAccessor.hpp
src/device/femtomega/: CMakeLists.txt  FemtoMegaDevice.cpp  FemtoMegaDevice.hpp  FemtoMegaDeviceInfo.cpp  FemtoMegaDeviceInfo.hpp  FemtoMegaFrameTimestampCalculator.cpp  FemtoMegaIDevice.cpp  FemtoMegaIDevice.hpp  FemtoMegaPresetManager.cpp  FemtoMegaPresetManager.hpp  FemtoMegaPropertyAccessor.cpp  FemtoMegaPropertyAccessor.hpp
src/device/gemini2/: CMakeLists.txt  G210Device.cpp  G210Device.hpp  G2AlgParamManager.cpp  G2AlgParamManager.hpp  G2DepthWorkModeManager.cpp  G2DepthWorkModeManager.hpp  G2Device.cpp  G2Device.hpp  G2DeviceInfo.cpp  G2DeviceInfo.hpp  G2PropertyAccessors.cpp  G2PropertyAccessors.hpp  G2StreamProfileFilter.hpp  G2XLDevice.cpp  G2XLDevice.hpp  G435LeDevice.cpp  G435LeDevice.hpp  G435LeFrameInterleaveManager.cpp  G435LeFrameInterleaveManager.hpp  G435LeFrameMetadataParserContainer.hpp  G435LeFrameProcessor.cpp  G435LeFrameProcessor.hpp  G435LeMetadataParser.hpp  G435LeMetadataTypes.hpp
src/device/gemini305/: CMakeLists.txt  G305AlgParamManager.cpp  G305AlgParamManager.hpp  G305DepthWorkModeManager.cpp  G305DepthWorkModeManager.hpp  G305Device.cpp  G305Device.hpp  G305DeviceInfo.cpp  G305DeviceInfo.hpp  G305FrameInterleaveManager.cpp  G305FrameInterleaveManager.hpp  G305FrameMetadataParserContainer.hpp  G305FrameTimestampCalculator.cpp  G305FrameTimestampCalculator.hpp  G305MetadataModifier.cpp  G305MetadataModifier.hpp  G305MetadataParser.hpp  G305MetadataTypes.hpp  G305PresetManager.cpp  G305PresetManager.hpp  G305PropertyAccessors.cpp  G305PropertyAccessors.hpp  G305SensorStreamStrategy.cpp  G305SensorStreamStrategy.hpp  G305StreamProfileFilter.cpp  G305StreamProfileFilter.hpp
src/device/gemini330/: CMakeLists.txt  DaBaiAAlgParamManager.cpp  DaBaiAAlgParamManager.hpp  DaBaiAPresetManager.cpp  DabaiADevice.cpp  DabaiADevice.hpp  DabaiAMetadataModifier.cpp  DabaiAMetadataModifier.hpp  G330AlgParamManager.cpp  G330DepthWorkModeManager.cpp  G330DepthWorkModeManager.hpp  G330Device.cpp  G330Device.hpp  G330DeviceInfo.cpp  G330DeviceInfo.hpp  G330FrameInterleaveManager.cpp  G330FrameInterleaveManager.hpp  G330FrameMetadataParserContainer.hpp  G330FrameTimestampCalculator.cpp  G330FrameTimestampCalculator.hpp  G330MetadataModifier.cpp  G330MetadataModifier.hpp  G330MetadataParser.hpp  G330MetadataTypes.hpp  G330NetAccelSensor.cpp  G330NetAccelSensor.hpp  G330NetDeviceClockSynchronizer.cpp  G330NetDeviceClockSynchronizer.hpp  G330NetDisparitySensor.cpp  G330NetDisparitySensor.hpp  G330NetGyroSensor.cpp  G330NetGyroSensor.hpp  G330NetStreamProfileFilter.cpp  G330NetStreamProfileFilter.hpp  G330NetVideoSensor.cpp  G330NetVideoSensor.hpp  G330PresetEngine.cpp  G330PresetEngine.hpp  G330PresetManager.cpp  G330PresetManager.hpp  (+4 more)
src/device/lidar/: CMakeLists.txt  LiDARAlgParamManager.cpp  (+11 more)
src/filter/: CMakeLists.txt  FilterDecorator.cpp  FilterDecorator.hpp  FilterFactory.cpp  IFilter.hpp
src/impl/: Advanced.cpp  ApplicationConfig.cpp  Context.cpp  Device.cpp  Error.cpp  Filter.cpp  Frame.cpp  ImplTypes.cpp  MultipleDevices.cpp  Pipeline.cpp  RecordPlayback.cpp  Sensor.cpp  StreamProfile.cpp  TypeHelper.cpp  Utils.cpp  Version.cpp
src/media/: CMakeLists.txt
src/pipeline/: CMakeLists.txt  Config.cpp  Config.hpp  FrameAggregator.cpp  FrameAggregator.hpp  IPipelineStatusCollector.hpp  Pipeline.cpp  Pipeline.hpp  PipelineStatusCollector.cpp  PipelineStatusCollector.hpp
src/platform/: CMakeLists.txt  IDeviceWatcher.hpp  ISourcePort.hpp  Platform.cpp  Platform.hpp  SourcePortInfo.hpp
src/shared/: CMakeLists.txt  InternalTypes.hpp
tests/pipeline_status_test/: CMakeLists.txt  pipeline_status_test.cpp
tools/benchmark/: CMakeLists.txt  README.md  benchmark.cpp
tools/timestamp_tracker/: CMakeLists.txt  README.md  timestamp_tracker.cpp
(+647 files in other folders)
